update final section

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1469,9 +1469,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Understanding Random Forest hyperparameters: \n",
+    "\n",
+    "```\n",
     "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
     "            max_depth=2, max_features='auto', max_leaf_nodes=None,\n",
     "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
@@ -1479,12 +1482,16 @@
     "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
     "            oob_score=False, random_state=None, verbose=0,\n",
     "            warm_start=False)\n",
-    "# Check the list of available parameters with `estimator.get_params().keys()"
+    "```\n",
+    "\n",
+    "```\n",
+    "Check the list of available parameters with `estimator.get_params().keys()\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1493,13 +1500,13 @@
      "text": [
       "Unoptimized model\n",
       "------\n",
-      "Accuracy score on testing data: 0.8363\n",
-      "F-score on testing data: 0.6684\n",
+      "Accuracy score on testing data: 0.8347\n",
+      "F-score on testing data: 0.6646\n",
       "\n",
       "Optimized Model\n",
       "------\n",
-      "Final accuracy score on the testing data: 0.8553\n",
-      "Final F-score on the testing data: 0.7271\n"
+      "Final accuracy score on the testing data: 0.8557\n",
+      "Final F-score on the testing data: 0.7280\n"
      ]
     }
    ],
@@ -1509,12 +1516,12 @@
     "\n",
     "clf = RandomForestClassifier() \n",
     "\n",
-    "rf_parameters = {'n_estimators': [500], \n",
+    "rf_parameters = {'n_estimators': [500],   # random forest parameters \n",
     "              'max_depth': [2,4,6,8,10], \n",
     "              'min_samples_split': [4], \n",
     "              'min_samples_leaf': [2]}\n",
     "\n",
-    "# ada_parameters = {'n_estimators': [50, 100], \n",
+    "# ada_parameters = {'n_estimators': [50, 100],   # ada boost parameters\n",
     "#               'learning_rate': [0.1, 0.5, 1],\n",
     "#               'random_state': [42]}\n",
     "\n",
@@ -1559,6 +1566,13 @@
     "| :------------: | :---------------: | :-------------: | :------------: | :----------: | :-----:|\n",
     "| Accuracy Score |  0.844            |  0.855          |  0.011         |  0.249       |  0.606 |\n",
     "| F-score        |  0.686            |  0.728          |  0.042         |  0.332       |  0.396 |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Viewing diffs between accuracy, f_score and naive scores"
    ]
   },
   {
@@ -1746,15 +1760,15 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "1. How do these five features compare to the five features you discussed in **Question 6**?\n",
+    "1. **How do these five features compare to the five features you discussed in Question 6?**\n",
     "    - I received a 2/3 in comparison to the feature importance extraction using the AdaBoostClassifier(). \n",
     "    \n",
     "    \n",
-    "2. If you were close to the same answer, how does this visualization confirm your thoughts? \n",
+    "2. **If you were close to the same answer, how does this visualization confirm your thoughts?**\n",
     "    - The capital loss and capital gain were exactly what I chose however, in terms of ranking, they were lower on the list at 3 and 4 out of 5. This visualization helps me to see that capital loss is actually more important in fact the most important feature to determining income level. I did note education as the 2 on my list so the \"education num\" I believe refers to the count of education levels you've received so that was similar. \n",
     "    \n",
     "    \n",
-    "3. If you were not close, why do you think these features are more relevant?\n",
+    "3. **If you were not close, why do you think these features are more relevant?**\n",
     "    - I was not close at all with regard to \"age\" or \"hours per week\" however, and I still feel working class is an indicator however, I realize now maybe it's not as much \"weight\" of an indicator than I thought. I suppose \"age\" is a factor in which you tend to increase your salary as you age however, I still believe \"gender or sex\" can be that difference of a small gap or big gap that is significant enough to help the model.  "
    ]
   },
@@ -1873,31 +1887,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \n",
-    "**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Before You Submit\n",
     "You will also need run the following in order to convert the Jupyter notebook into HTML, so that your submission will include both files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['[NbConvertApp] Converting notebook finding_donors.ipynb to html',\n",
-       " '[NbConvertApp] Writing 544609 bytes to finding_donors.html']"
+       " '[NbConvertApp] Writing 544518 bytes to finding_donors.html']"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
